Bug 464775: Fix for findbugs warnings (round3)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>
Reviewed-by: Petros